--- a/acceuil.html
+++ b/acceuil.html
@@ -25,7 +25,7 @@
 
 <main>
   <section class="hero">
-    <img src="images/jet_ski.png" alt="Un homme sur un jet-ski" class="hero-img">
+    <img src="images/accuil-img1.jpg" alt="Un homme sur un jet-ski" class="hero-img">
     <div class="hero-text">
       <h1>ÇA EN ‘JET</h1>
       <p>Location de Jet-Ski</p>
@@ -34,7 +34,7 @@
 
   <section class="zones">
     <div class="zone">
-      <img src="images/zones_autorise.png" alt="Jet-Ski dans une zone sécurisée">
+      <img src="images/zone-img1.jpg" alt="Jet-Ski dans une zone sécurisée">
       <div>
         <h2 class="green">Zones où le jet-ski est autorisé</h2>
         <ul>
@@ -48,7 +48,7 @@
 
   <section class="zones">
     <div class="zone reverse">
-      <img src="images/zones_non_autorise.jpg" alt="Jet-Ski en zone non autorisée">
+      <img src="images/zone-img2.jpg" alt="Jet-Ski en zone non autorisée">
       <div>
         <h2 class="red">Zones interdites</h2>
         <ul>
@@ -62,7 +62,7 @@
 
   <section class="zones">
     <div class="zone">
-      <img src="images/conditions_obligatoires.png" alt="Obligations d'utilisation">
+      <img src="images/zone-img3.jpg" alt="Obligations d'utilisation">
       <div>
         <h2>Conditions obligatoires</h2>
         <p>Permis bateau côtier requis pour piloter un jet-ski (sauf location encadrée avec moniteur).</p>
