--- a/catalog.html
+++ b/catalog.html
@@ -6,4 +6,24 @@
     <title>Catalog</title>
     <link rel="stylesheet" type="text/css" href="./styles.css">
     </head>
+    <body>
+        <header class="header">
+            <nav class="nav-bar">
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="./index.html">Accuil</a></li>
+                    <li class="nav-item"><a href="./catalog.html">Catalog</a></li>
+                    <li class="nav-item"><a href="reservation.html">Réservation</a></li>
+                    <li class="nav-item"><a href="aboutContact.html">À propos / Contact</a></li>
+                    <li class="nav-item"><a href="registration.html">S'inscrire</a></li>
+                </ul>
+
+                <!--header menu-->
+                <div class="menu">
+                    <div class="menu-icon"></div>
+                    <div class="menu-icon"></div>
+                    <div class="menu-icon"></div>
+                </div>
+            </nav>
+        </header>
+    </body>
 </html>
