--- a/aboutContact.html
+++ b/aboutContact.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About&Contact</title>
-    <link rel="stylesheet" href="styles.css">
+<html>
+    <head>
+        <title>
+            A propos
+        </title>
+        <body>
+          <h3>A propos</h3></a>
+           <p>Notre passion : rendre la mer accessible a tous.</p>
+           <h3>Contact</h3>
+          <form><label><h4>Nom:</h4></label></form>
+          <input type="text" name="Nom">
+           <form><label><h4>Email:</h4></label></form>
+           <input type="email" placeholder="test@gmail.com">
+          <form><label><h4>Telephone:</h4></label></form> 
+          <input type="tel" name="Telephone">
+           <form><label><h4>Sujet:</h4></label></form>
+           <input type="text" name="Sujet">
+           <form><label><h4>Message:</h4></label></form>
+              <textarea name="Message" rows="5" cols="40"></textarea>
+              <form><input type="submit" value="Envoyer"></form>
+                <a href="mapage.html"> FAQ</a>
 
-    <--Here you can implement your code -->
-        
-</head>
+        </body>
+    </head>
 </html>
