changer mes code d'accuil

--- a/accuil.html
+++ b/accuil.html
@@ -1,12 +1,124 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accuil</title>
-    <link rel="stylesheet" href="styles.css">
-
-    <--Here you can implement your code -->
-        
+  <link rel="stylesheet" href="style.css">
+  <link href='https://fonts.googleapis.com/css?family=Bebas+Neue' rel='stylesheet'>
+  <link href="https://fonts.googleapis.com/css?family=Bebas+Neue" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ça en 'Jet</title>
+  
 </head>
+<body>
+
+  <header>
+    <nav class="navbar">
+      <ul class="left">
+        <li><a href="#">Accueil</a></li>
+        <li><a href="#">Catalogue</a></li>
+        <li><a href="#">Réservation</a></li>
+      </ul>
+      <ul class="right">
+        <li><a href="#">Connexion</a></li>
+        <li><a href="#">Inscription</a></li>
+        <li><a href="#" class="menu-link">Menu &#9776;</a></li>
+      </ul>
+    </nav>
+  </header>
+
+<main>
+  <section class="hero">
+    <img src="images/accuil-img1.jpg" alt="Un homme sur un jet-ski" class="hero-img">
+     <a href="/catalogue" class="btn-reservez">Réservez maintenant</a>
+    <div class="hero-text">
+      <h1>ÇA EN ‘JET</h1>
+      <p>Location de Jet-Ski</p>
+    </div>
+  </section>
+  
+
+  <section class="zones">
+    <div class="zone">
+      <img src="images/zone-img1.jpg" alt="Jet-Ski dans une zone sécurisée">
+      <div>
+        <h2 class="green">Zones où le jet-ski est autorisé</h2>
+        <ul>
+          <li>Au-delà de 300 mètres de la côte (navigation libre, en respectant les limitations locales).</li>
+          <li>Zones de mise à l’eau balisées (corridors depuis plage ou port).</li>
+          <li>Zones définies par arrêté local.</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <section class="zones">
+    <div class="zone reverse">
+      <img src="images/zone-img2.jpg" alt="Jet-Ski en zone non autorisée">
+      <div class="texte">
+        <h2 class="red">Zones interdites</h2>
+        <ul>
+          <li>À moins de 300 m du rivage (sauf chenaux d’accès).</li>
+          <li>Dans les zones de baignade (bouées jaunes).</li>
+          <li>Autour des réserves naturelles ou ports.</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <section class="zones">
+    <div class="zone">
+      <img src="images/zone-img3.jpg" alt="Obligations d'utilisation">
+      <div>
+        <h2>Conditions obligatoires</h2>
+        <p>Permis bateau côtier requis pour piloter un jet-ski (sauf location encadrée avec moniteur).</p>
+      </div>
+    </div>
+  </section>
+</main>
+
+<footer>
+  <div class="footer-content">
+
+    <div class="footer-socials">
+      <a href="#"><img src="images/x-icon.png" alt="X"></a>
+      <a href="#"><img src="images/instagram-icon.png" alt="Instagram"></a>
+      <a href="#"><img src="images/tiktok-icon.png" alt="YouTube"></a>
+    </div>
+
+    <div class="footer-column">
+      <h3>Plan du site</h3>
+      <ul>
+        <li><a href="#">Accueil</a></li>
+        <li><a href="#">Catalogue</a></li>
+        <li><a href="#">Réservation</a></li>
+        <li><a href="#">Mon compte</a></li>
+        <li><a href="#">Administrateur</a></li>
+      </ul>
+    </div>
+
+
+    <div class="footer-column">
+      <h3>Mentions légales</h3>
+      <ul>
+        <li><a href="#">CGU/CGV</a></li>
+        <li><a href="#">Politique de confidentialité</a></li>
+        <li><a href="#">Gestion des cookies</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Contact</h3>
+      <p>caenjet@gmail.com</p>
+      <p>06.00.66.06.00</p>
+      <p>27 Rue du Jet</p>
+      <p>17000 Jet ville</p>
+    </div>
+
+  </div>
+
+  <div class="footer-bottom">
+    <p>Copyright © 2025 Ça en 'Jet — Tous droits réservés</p>
+  </div>
+</footer>
+</body>
 </html>
