--- a/accuil.html
+++ b/accuil.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <link rel="stylesheet" href="style.css">
-  <link href='https://fonts.googleapis.com/css?family=Bebas+Neue' rel='stylesheet'>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Bebas+Neue" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
     <nav class="navbar">
       <ul class="left">
         <li><a href="#">Accueil</a></li>
-        <li><a href="#">Catalogue</a></li>
+        <li><a href="./catalog.html#catalog-header">Catalogue</a></li>
         <li><a href="#">Réservation</a></li>
       </ul>
       <ul class="right">
@@ -30,7 +30,7 @@
   <section class="hero">
     <img src="images/accuil-img1.jpg" alt="Un homme sur un jet-ski" class="hero-img">
      <a href="/catalogue" class="btn-reservez">Réservez maintenant</a>
-    <div class="hero-text">
+    <div id="title" class="hero-text">
       <h1>ÇA EN ‘JET</h1>
       <p>Location de Jet-Ski</p>
     </div>
