--- a/catalog.html
+++ b/catalog.html
@@ -21,6 +21,9 @@
         </section>
     </header>
     <main>
+        <div id="catalog-header">
+            <h1>Our Products</h1>
+            <p>Browse our exclusive collection of products.</p>
         <section class="product-list">
             <article class="product-item">
                 <h2>Product 1</h2>
@@ -39,6 +42,7 @@
             </article>
             <!-- More products can be added here -->
         </section>
+        </div>
     </main>
     <footer>
         <p>&copy; 2024 Your Company Name</p>
