--- a/accuil.html
+++ b/accuil.html
@@ -30,7 +30,7 @@
   <section class="hero">
     <img src="images/accuil-img1.jpg" alt="Un homme sur un jet-ski" class="hero-img">
      <a href="/catalogue" class="btn-reservez">Réservez maintenant</a>
-    <div id="title" class="hero-text">
+    <div class="hero-text">
       <h1>ÇA EN ‘JET</h1>
       <p>Location de Jet-Ski</p>
     </div>
