--- a/catalog.html
+++ b/catalog.html
@@ -4,25 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalog</title>
-    <link rel="stylesheet" type="text/css" href="./styles.css">
+    <link rel="stylesheet"  href="styles.css">
     </head>
     <body>
         <header class="header">
             <nav class="nav-bar">
-                <ul class="nav-list">
-                    <li class="nav-item"><a href="./index.html">Accuil</a></li>
-                    <li class="nav-item"><a href="./catalog.html">Catalog</a></li>
-                    <li class="nav-item"><a href="reservation.html">Réservation</a></li>
-                    <li class="nav-item"><a href="aboutContact.html">À propos / Contact</a></li>
-                    <li class="nav-item"><a href="registration.html">S'inscrire</a></li>
-                </ul>
+                <div class="left-section">
+                    <ul class="nav-list">
+                        <li class="nav-item"><a href="./index.html">Accuil</a></li>
+                        <li class="nav-item"><a href="./catalog.html">Catalogue</a></li>
+                        <li class="nav-item"><a href="reservation.html">Réservation</a></li>
+                    </ul>
+                </div>
+
+                <div class="right-section">
+                    <ul class="nav-list">
+                        <li class="nav-item"><a href="aboutContact.html">Connection</a></li>
+                        <li class="nav-item"><a href="registration.html">Inscriptin</a></li>
+                    </ul>
+                </div>
 
                 <!--header menu-->
-                <div class="menu">
-                    <div class="menu-icon"></div>
-                    <div class="menu-icon"></div>
-                    <div class="menu-icon"></div>
-                </div>
+                <section class="menu-section">
+                    <input type="button" value="Menu" class="menu-btn">
+                    <div class="menu">
+                        <div class="menu-icon"></div>
+                        <div class="menu-icon"></div>
+                        <div class="menu-icon"></div>
+                    </div>
+                </section>
             </nav>
         </header>
     </body>
