--- a/accuil.html
+++ b/accuil.html
@@ -14,12 +14,12 @@
   <header>
     <nav class="navbar">
       <ul class="left">
-        <li><a href="#">Accueil</a></li>
+        <li><a href="./accuil.html">Accueil</a></li>
         <li><a href="./catalog.html#catalog-header">Catalogue</a></li>
-        <li><a href="#">Réservation</a></li>
+        <li><a href="./reservation.html">Réservation</a></li>
       </ul>
       <ul class="right">
-        <li><a href="#">Connexion</a></li>
+        <li><a href="./registration.html">Connexion</a></li>
         <li><a href="#">Inscription</a></li>
         <li><a href="#" class="menu-link">Menu &#9776;</a></li>
       </ul>
@@ -38,9 +38,8 @@
   
 
   <section class="zones">
-    <div class="zone">
-      <img src="images/zone-img1.jpg" alt="Jet-Ski dans une zone sécurisée">
-      <div>
+      <img src="images/zone-img1.jpg" alt="Jet-Ski dans une zone sécurisée" class="zone-img">
+      <div class="zone-text">
         <h2 class="green">Zones où le jet-ski est autorisé</h2>
         <ul>
           <li>Au-delà de 300 mètres de la côte (navigation libre, en respectant les limitations locales).</li>
@@ -48,13 +47,11 @@
           <li>Zones définies par arrêté local.</li>
         </ul>
       </div>
-    </div>
   </section>
 
   <section class="zones">
-    <div class="zone reverse">
-      <img src="images/zone-img2.jpg" alt="Jet-Ski en zone non autorisée">
-      <div class="texte">
+      <img src="images/zone-img2.jpg" alt="Jet-Ski en zone non autorisée" class="zone-img">
+      <div class="zone-text">
         <h2 class="red">Zones interdites</h2>
         <ul>
           <li>À moins de 300 m du rivage (sauf chenaux d’accès).</li>
@@ -62,13 +59,11 @@
           <li>Autour des réserves naturelles ou ports.</li>
         </ul>
       </div>
-    </div>
   </section>
 
   <section class="zones">
-    <div class="zone">
-      <img src="images/zone-img3.jpg" alt="Obligations d'utilisation">
-      <div>
+      <img src="images/zone-img3.jpg" alt="Obligations d'utilisation" class="zone-img">
+      <div class ="zone-text">
         <h2>Conditions obligatoires</h2>
         <p>Permis bateau côtier requis pour piloter un jet-ski (sauf location encadrée avec moniteur).</p>
       </div>
